# SteamNations

./: .gitignore  CMakeLists.txt  README.md  SteamNations.pro
android/: AndroidManifest.xml
lib/gtest-1.7.0/: CMakeCache.txt  Makefile  cmake_install.cmake
src/: CMakeLists.txt
src/SNCore/: .Object.cpp.kate-swp  Action.cpp  Action.hpp  AttackAction.cpp  Board.cpp  Board.hpp  CMakeLists.txt  CaptureAction.cpp  Config.hpp  Console.cpp  Console.hpp  CreateUnitAction.cpp  CreateUnitAction.hpp  EnumHelpers.hpp  GameManager.cpp  GameManager.hpp  GameSettings.cpp  GameSettings.hpp  MoveAction.cpp  Object.cpp  Object.hpp  Player.cpp  Player.hpp  Prototype.cpp  Prototype.hpp  Resources.hpp  SNCommon.hpp  SNTypes.hpp  Serial.hpp  SettleAction.cpp  Settler.cpp  Settler.hpp  SettlerPrototype.cpp  SettlerPrototype.hpp  Soldier.cpp  Soldier.hpp  Tile.cpp  Tile.hpp  Town.cpp  Town.hpp  (+2 more)
src/SNCore/AI/: AI.cpp  AI.hpp  CMakeLists.txt
src/SNCore/AI/Heuristics/: Simple.cpp  Simple.hpp
src/SNCore/Actions/: Action.cpp  Action.hpp  Actions.hpp  AttackAction.cpp  AttackAction.hpp  CaptureAction.cpp  CaptureAction.hpp  CreateBuildingAction.cpp  CreateBuildingAction.hpp  CreateTownAction.cpp  CreateTownAction.hpp  CreateUnitAction.cpp  CreateUnitAction.hpp  MoveAction.cpp  MoveAction.hpp  SettleAction.cpp  SettleAction.hpp  SpawnUnitAction.cpp  SpawnUnitAction.hpp
src/SNCore/Bonuses/: Bonus.cpp  Bonus.hpp  Bonuses.cpp  Bonuses.hpp  DefenseBonuses.cpp  DefenseBonuses.hpp  EconomyBonuses.cpp  EconomyBonuses.hpp  WarfareBonuses.cpp  WarfareBonuses.hpp
src/SNCore/Objects/: Object.cpp  Object.hpp  Objects.hpp  Settler.cpp  Settler.hpp  Soldier.cpp  Soldier.hpp  Town.cpp  Town.hpp  Unit.cpp  Unit.hpp
src/SNCore/Objects/Prototypes/: Prototype.cpp  Prototype.hpp  Prototypes.hpp  SettlerPrototype.cpp  SettlerPrototype.hpp  SoldierPrototype.cpp  SoldierPrototype.hpp  SoldierStats.hpp
src/SNGame/: Board.cpp  Board.hpp  BoardField.cpp  BoardField.hpp  CMakeLists.txt  GameBoard.cpp  GameBoard.hpp  GameView.cpp  GameView.hpp  GraphicInterface.cpp  GraphicInterface.h  GraphicInterface.hpp  InfoBox.cpp  InfoBox.hpp  NextTurnButton.cpp  NextTurnButton.hpp  ObjectInfoBox.cpp  ObjectInfoBox.hpp  SNHelpers.hpp  SNScene.cpp  SNScene.hpp  SteamNations.cpp  SteamNations.hpp  TextureManager.cpp  TextureManager.hpp  TileGraphics.cpp  TileGraphics.hpp  TownGraphics.cpp  TownGraphics.hpp  UnitGraphics.cpp  UnitGraphics.hpp  board.cpp  crab.cpp  crab.hpp  gameBoard.js  images.qrc  main.cpp  qml.qrc
src/SNGame/Graphics/: TileGraphics.cpp  TileGraphics.hpp  TownGraphics.cpp  TownGraphics.hpp  UnitGraphics.cpp  UnitGraphics.hpp
src/SNGame/qml/: .GameUI.qml.kate-swp  Button.qml  Crab.qml  CreateGame.qml  GameBoard.qml  GameConsole.qml  GameUI.qml  MainMenu.qml  MainWindow.qml  MenuButton.qml  Rekt.qml  flick.qml  main.qml
src/SNGame/qml/gui/: MenuButton.qml  NextTurnButton.qml  ObjectInfoBox.qml  ParamDisplay.qml  PlayerDataEntry.qml  SNImage.qml  StateButton.qml  StaticLeftForeground.qml  TechWindow.qml  TextButton.qml
src/SNGame/qml/gui/colorPicker/: ColorCell.qml  ColorPicker.qml
src/menu/: CMakeLists.txt  FantasyCIV.cpp  FantasyCIV.hpp  MenuController.cpp  MenuController.hpp  Menus.cpp  Menus.hpp  SteamNations.cpp  main.cpp
(+1 files in other folders)
