add_library(SNCore
	Board.cpp
	GameManager.cpp
	Tile.cpp
	Player.cpp
	Actions/Action.cpp
	Actions/AttackAction.cpp
	Actions/MoveAction.cpp
	Actions/SettleAction.cpp
	Actions/CreateTownAction.cpp 
	Actions/CreateUnitAction.cpp
	Actions/CaptureAction.cpp
	Actions/SpawnUnitAction.cpp
	Objects/Object.cpp
	Objects/Unit.cpp
	Objects/Settler.cpp
	Objects/Soldier.cpp
	Objects/Town.cpp
	Objects/Prototypes/Prototype.cpp
	Objects/Prototypes/SettlerPrototype.cpp
	Objects/Prototypes/SoldierPrototype.cpp
	)
qt5_use_modules(SNCore Core)